Initial implementation of sensor reading and notifying using ISR callbacks. This is equal to the Keil implementation and should be revised and scraped, as it a bad design decision.

--- a/pca10040/s132/armgcc/Makefile
+++ b/pca10040/s132/armgcc/Makefile
@@ -24,6 +24,7 @@ SRC_FILES += \
   $(SDK_ROOT)/components/drivers_nrf/clock/nrf_drv_clock.c \
   $(SDK_ROOT)/components/drivers_nrf/common/nrf_drv_common.c \
   $(SDK_ROOT)/components/drivers_nrf/gpiote/nrf_drv_gpiote.c \
+  $(SDK_ROOT)/components/drivers_nrf/spi_master/nrf_drv_spi.c \
   $(SDK_ROOT)/components/drivers_nrf/uart/nrf_drv_uart.c \
   $(SDK_ROOT)/components/libraries/bsp/bsp.c \
   $(SDK_ROOT)/components/libraries/bsp/bsp_nfc.c \
@@ -38,6 +39,8 @@ SRC_FILES += \
   $(SDK_ROOT)/components/toolchain/system_nrf52.c \
   $(SDK_ROOT)/components/ble/ble_services/ble_lbs/ble_lbs.c \
   $(SDK_ROOT)/components/softdevice/common/softdevice_handler/softdevice_handler.c \
+  $(PROJ_DIR)/spi/spi.c \
+  $(PROJ_DIR)/services/ble_ims.c \
 
 # Include folders common to all targets
 INC_FOLDERS += \
@@ -142,6 +145,8 @@ INC_FOLDERS += \
   $(SDK_ROOT)/components/softdevice/common/softdevice_handler \
   $(SDK_ROOT)/components/ble/ble_services/ble_hrs \
   $(SDK_ROOT)/components/libraries/log/src \
+  $(PROJ_DIR)/spi \
+  $(PROJ_DIR)/services \
 
 # Libraries common to all targets
 LIB_FILES += \
